tests/ui/imports/issue-38293.stderr
error[E0432]: unresolved import `foo::f`
  --> $DIR/issue-38293.rs:7:10
   |
LL | use foo::f::{self};
   |          ^ expected type, found function `f` in `foo`

error[E0423]: cannot find function `baz` in this scope
  --> $DIR/issue-38293.rs:16:5
   |
LL |     baz();
   |     ^^^ not found in this scope
   |
   = note: a module named `baz` exists in another namespace
help: consider importing this function instead
   |
LL + use bar::baz;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0432.
For more information about an error, try `rustc --explain E0423`.
